<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="5dp"
    android:paddingTop="10dp"
    android:paddingEnd="5dp"
    android:paddingBottom="5dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/setting_caption"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textStyle="bold" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/setting_displayed_text"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="5dp">

                <EditText
                    android:id="@+id/setting_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="flagNoExtractUi"
                    android:inputType="text"
                    android:minHeight="48dp"
                    tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/setting_loop_mode"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:ignore="UselessParent">

                    <RadioButton
                        android:id="@+id/radioButton_single"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/setting_loop_mode_single" />

                    <RadioButton
                        android:id="@+id/radioButton_loop"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/setting_loop_mode_loop" />

                    <RadioButton
                        android:id="@+id/radioButton_fill_loop"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/setting_loop_mode_fill_loop" />
                </RadioGroup>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:text="@string/setting_text_size"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="5dp">

                <com.warkiz.widget.IndicatorStayLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.warkiz.widget.IndicatorSeekBar
                        android:id="@+id/seekBar_text_size"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:isb_max="1000"
                        app:isb_min="1"
                        app:isb_only_thumb_draggable="true"
                        app:isb_show_indicator="circular_bubble"
                        app:isb_show_tick_text="true"
                        app:isb_thumb_drawable="@drawable/thumb"
                        app:isb_tick_count="2"
                        app:isb_tick_text_color="@color/color_gray" />
                </com.warkiz.widget.IndicatorStayLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:text="@string/setting_scrolling_speed"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="5dp">

                <com.warkiz.widget.IndicatorStayLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.warkiz.widget.IndicatorSeekBar
                        android:id="@+id/seekBar_speed"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:isb_max="150"
                        app:isb_min="0"
                        app:isb_only_thumb_draggable="true"
                        app:isb_show_indicator="rounded_rectangle"
                        app:isb_show_tick_text="true"
                        app:isb_thumb_drawable="@drawable/thumb"
                        app:isb_tick_count="2"
                        app:isb_tick_text_color="@color/color_gray" />
                </com.warkiz.widget.IndicatorStayLayout>


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="5dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/setting_font_color"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                    <EditText
                        android:id="@+id/setting_text_color_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:ems="8"
                        android:enabled="false"
                        android:gravity="center"
                        android:inputType="text"
                        android:minHeight="48dp"
                        android:text="#FF00FF"
                        tools:ignore="LabelFor,SpeakableTextPresentCheck" />


                </LinearLayout>

                <Space
                    android:layout_width="30dp"
                    android:layout_height="wrap_content" />

                <com.skydoves.colorpickerview.ColorPickerView
                    android:id="@+id/colorPickerView_text"
                    android:layout_width="150dp"
                    android:layout_height="150dp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="5dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/setting_bg_color"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                    <EditText
                        android:id="@+id/setting_bg_color_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:ems="8"
                        android:enabled="false"
                        android:gravity="center"
                        android:inputType="text"
                        android:text="#FF00FF"
                        tools:ignore="LabelFor,SpeakableTextPresentCheck" />

                </LinearLayout>

                <Space
                    android:layout_width="30dp"
                    android:layout_height="wrap_content" />

                <com.skydoves.colorpickerview.ColorPickerView
                    android:id="@+id/colorPickerView_bg"
                    android:layout_width="150dp"
                    android:layout_height="150dp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>